# miniAero

./: .gitignore  .gitmodules
kokkos/: CMakeLists.txt
kokkos/tests/3D_Sod_Parallel/: 3d_sod_parallel_test.sh
